Create a tic-tac-toe game

--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Strona główna</title>
         <link href="favicon.ico" rel="SHORTCUT ICON" type="image/x-icon" />
+        <link rel="stylesheet" type="text/css" href="styles.css" />
     </head>
     <body>
-        <h1>Hello world</h1>
+        <header>
+            <div class="navbar">
+                aaa
+            </div>
+        </header>
     </body>
 </html>
