Add background for better readability of labels

--- a/game.html
+++ b/game.html
@@ -69,9 +69,10 @@
                     9
                 </div>
             </div>
-            
-            <p class="text-center" id="player-p">It is <span id="current-player-symbol"></span> turn now</p>
-            <p class="text-center" id="game-mode-p">Current Game Mode: <span id="current-game-mode">Two players</span></p>
+            <div class="rounded dimmed" id="labels-container">
+                <p class="text-center" id="player-p">It is <span id="current-player-symbol"></span> turn now</p>
+                <p class="text-center" id="game-mode-p">Current Game Mode: <span id="current-game-mode">Two players</span></p>
+            </div>
             <div id="game-mode-btn-container" class="text-center">
                 <button
                     class="text-center"
