Add intro section (not fully responsive)

--- a/index.html
+++ b/index.html
@@ -35,7 +35,58 @@
             <div class="titles-container text-center">
                 <h1 id="title" class="text-center">Visit Iceland today</h1>
                 <h2 id="subtitle" class="text-center">Adventure awaits</h2>
-                <button style="margin: 2rem auto" class="primary-btn-light">Learn more</button>
+                <a href="#intro" class="primary-btn-light" id="action-btn">Learn more</a>
+            </div>
+        </section>
+        <section id="intro">
+            <div id="intro-content-container">
+                <img src="images/landscape.jpg" />
+                <div id="intro-text">
+                    <h3 id="intro-title">Why visit Island?</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem error tempore, dicta qui ab harum
+                        vitae. Laboriosam facilis vitae recusandae aliquid at ad sequi facere voluptatibus quasi laborum
+                        doloremque nobis odit enim veniam quod ratione obcaecati dignissimos commodi, blanditiis
+                        expedita perferendis dolore modi quibusdam assumenda. Asperiores illum odio dolor doloribus in?
+                        Laudantium, aliquid. Consequuntur adipisci, quaerat dolore alias nam doloremque enim corporis
+                        fugiat nemo accusamus molestias placeat, omnis, voluptas quisquam animi vitae debitis quo a
+                        dolores odit illum assumenda quos nulla nisi! Deleniti numquam provident totam sunt labore,
+                        officia accusamus animi, laudantium dolorum maxime dolor facere tempora, hic nobis? Consequatur!
+                    </p>
+                </div>
+                <h4 id="intro-subtitle" class="text-center">Discover the Unknown</h4>
+                <div id="intro-grid-container">
+                    <div class="grid-column">
+                        <img src="images/intro-pic-1.jpg" alt="Glacier cave" />
+                    </div>
+                    <div class="grid-column">
+                        <h5>At Night Enjoy Aurora Borealis</h5>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia nesciunt nisi ducimus
+                            ratione soluta tenetur quam iste possimus tempora adipisci?
+                        </p>
+                    </div>
+                    <div class="grid-column">
+                        <img src="images/intro-pic-2.jpg" alt="Iceland horses">
+                    </div>
+                    <div class="grid-column">
+                        <h5>Explore the Amazing Glacier Caves</h5>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia nesciunt nisi ducimus
+                            ratione soluta tenetur quam iste possimus tempora adipisci?
+                        </p>
+                    </div>
+                    <div class="grid-column">
+                        <img src="images/intro-pic-3.jpg" alt="Iceland horses">
+                    </div>
+                    <div class="grid-column">
+                        <h5>Find Peace Among Fauna and Flora</h5>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia nesciunt nisi ducimus
+                            ratione soluta tenetur quam iste possimus tempora adipisci?
+                        </p>
+                    </div>
+                </div>
             </div>
         </section>
         <script src="js/navbar_toggler.js"></script>
