Add missing alt to landscape img

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </section>
         <section id="intro">
             <div id="intro-content-container">
-                <img src="images/landscape.jpg" />
+                <img src="images/landscape.jpg" alt="Iceland landscape" />
                 <div id="intro-text">
                     <h3 id="intro-title">Why visit Island?</h3>
                     <p>
