Redesign intro cards section

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </section>
         <section id="intro">
             <div id="intro-content-container">
-                <img src="images/landscape.jpg" alt="Iceland landscape" />
+                <img id="intro-img" src="images/landscape.jpg" alt="Iceland landscape" />
                 <div id="intro-text">
                     <h3 id="intro-title">Why visit Island?</h3>
                     <p>
@@ -54,36 +54,36 @@
                     </p>
                 </div>
                 <h4 id="intro-subtitle" class="text-center">Discover the Unknown</h4>
-                <div id="intro-grid-container">
-                    <div class="grid-column">
-                        <img src="images/intro-pic-1.jpg" alt="Glacier cave" />
+                <div id="intro-cards-container">
+                    <div class="card">
+                        <img class="card-image-top" src="images/intro-pic-1.jpg" alt="Glacier cave" />
+                        <div class="card-body">
+                            <h5 class="card-title">Explore the Amazing Glacier Caves</h5>
+                            <div class="card-text">
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Similique aut blanditiis sed
+                                reiciendis qui eum impedit, optio voluptates hic voluptatibus.
+                            </div>
+                        </div>
                     </div>
-                    <div class="grid-column">
-                        <h5>At Night Enjoy Aurora Borealis</h5>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia nesciunt nisi ducimus
-                            ratione soluta tenetur quam iste possimus tempora adipisci?
-                        </p>
+                    <div class="card">
+                        <img class="card-image-top" src="images/intro-pic-2.jpg" alt="Iceland horses" />
+                        <div class="card-body">
+                            <h5 class="card-title">Find Peace among Fauna and Flora</h5>
+                            <div class="card-text">
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Similique aut blanditiis sed
+                                reiciendis qui eum impedit, optio voluptates hic voluptatibus.
+                            </div>
+                        </div>
                     </div>
-                    <div class="grid-column">
-                        <img src="images/intro-pic-2.jpg" alt="Iceland horses">
-                    </div>
-                    <div class="grid-column">
-                        <h5>Explore the Amazing Glacier Caves</h5>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia nesciunt nisi ducimus
-                            ratione soluta tenetur quam iste possimus tempora adipisci?
-                        </p>
-                    </div>
-                    <div class="grid-column">
-                        <img src="images/intro-pic-3.jpg" alt="Iceland horses">
-                    </div>
-                    <div class="grid-column">
-                        <h5>Find Peace Among Fauna and Flora</h5>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia nesciunt nisi ducimus
-                            ratione soluta tenetur quam iste possimus tempora adipisci?
-                        </p>
+                    <div class="card">
+                        <img class="card-image-top" src="images/intro-pic-3.jpg" alt="Aurora Borealis" />
+                        <div class="card-body">
+                            <h5 class="card-title">At Night Enjoy the Magnificent Aurora Borealis</h5>
+                            <div class="card-text">
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Similique aut blanditiis sed
+                                reiciendis qui eum impedit, optio voluptates hic voluptatibus.
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
