--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     </p>
                 </div>
                 <div id="contact-form">
-                    <form>
+                    <form method="POST">
                         <div class="input-group">
                             <label class="sr-only" for="contact_name">Name</label>
                             <input
