Further changes to fix card img height

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <h4 id="intro-subtitle" class="text-center">Discover the Unknown</h4>
                 <div id="intro-cards-container">
                     <div class="card">
-                        <img class="card-image-top" src="images/intro-pic-1.jpg" alt="Glacier cave" />
+                        <img class="card-img-top" src="images/intro-pic-1.jpg" alt="Glacier cave" />
                         <div class="card-body">
                             <h5 class="card-title">Explore the Amazing Glacier Caves</h5>
                             <div class="card-text">
@@ -64,7 +64,7 @@
                         </div>
                     </div>
                     <div class="card">
-                        <img class="card-image-top" src="images/intro-pic-2.jpg" alt="Iceland horses" />
+                        <img class="card-img-top" src="images/intro-pic-2.jpg" alt="Iceland horses" />
                         <div class="card-body">
                             <h5 class="card-title">Find Peace among Fauna and Flora</h5>
                             <div class="card-text">
@@ -74,7 +74,7 @@
                         </div>
                     </div>
                     <div class="card">
-                        <img class="card-image-top" src="images/intro-pic-3.jpg" alt="Aurora Borealis" />
+                        <img class="card-img-top" src="images/intro-pic-3.jpg" alt="Aurora Borealis" />
                         <div class="card-body">
                             <h5 class="card-title">At Night Enjoy the Magnificent Aurora Borealis</h5>
                             <div class="card-text">
